--- a/src/pages/nosotros/campus.astro
+++ b/src/pages/nosotros/campus.astro
@@ -4,7 +4,7 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 import { Image } from "astro:assets";
 import students from "../../assets/estudiantes-frente-a-hangares-de-ifly.webp";
 import CounterCard from "../../components/CounterCard";
-import { stats } from "../../data/stats";
+import stats from "../../data/stats";
 import tecnico1 from "../../assets/tecnico-en-mantenimiento-revisando-avion-de-ifly.webp";
 import tecnico2 from "../../assets/tecnico-haciendo-mantenimiento-a-avion-de-ifly.webp";
 import IndexForm from "../../components/IndexForm.astro";
