change video to start at 32s

--- a/src/components/HomepageHeader.astro
+++ b/src/components/HomepageHeader.astro
@@ -31,7 +31,7 @@ const data = Astro.currentLocale === "en" ? enData : esData;
   />
 
   <iframe
-    src="https://www.youtube.com/embed/L9q_TVnSj_4?autoplay=1&loop=1&mute=1&iv_load_policy=3&controls=0&disablekb=1&fs=0&playlist=L9q_TVnSj_4&vq=hd1080"
+    src="https://www.youtube.com/embed/L9q_TVnSj_4?autoplay=1&loop=1&mute=1&iv_load_policy=3&controls=0&disablekb=1&fs=0&playlist=L9q_TVnSj_4&vq=hd1080&start=32"
     title="iFly Universidad Aeronáutica"
     loading="lazy"
     allow="accelerometer; autoplay; fullscreen;
@@ -39,7 +39,6 @@ const data = Astro.currentLocale === "en" ? enData : esData;
     referrerpolicy="strict-origin-when-cross-origin"
     class="hidden md:block absolute -top-52 w-[150rem] -left-[20rem] h-[100rem] object-cover -z-50"
     id="video-iframe"></iframe>
-
   <div
     class="absolute inset-0 bg-gradient-to-t from-black via-transparent to-black -z-40"
   >
