--- a/src/pages/en/fleet/simulators.astro
+++ b/src/pages/en/fleet/simulators.astro
@@ -42,7 +42,7 @@ const data = {
           student on their performance during the maneuvers carried out in the
           session.
         </p>
-        <a href="/contacto" class="btn-primary">Schedule a visit</a>
+        <a href="/en/contact" class="btn-primary">Schedule a visit</a>
       </div>
       <div class="flex-1 relative h-fit mr-5">
         <Image
@@ -76,7 +76,7 @@ const data = {
           aircraft, enabling our students to begin their practice under the
           supervision and feedback of specialized instructors.
         </p>
-        <a href="/contacto" class="btn-secondary">Schedule a visit</a>
+        <a href="/en/contact" class="btn-secondary">Schedule a visit</a>
       </div>
       <div class="flex-1 relative h-fit mr-5">
         <Image
@@ -112,7 +112,7 @@ const data = {
           taken in pairs. At the end of your Pro Pilot course, you will have the
           experience of flying a commercial aircraft.
         </p>
-        <a href="/contacto" class="btn-primary">Schedule a visit</a>
+        <a href="/en/contact" class="btn-primary">Schedule a visit</a>
       </div>
       <div class="flex-1 relative h-fit mr-5">
         <Image
@@ -147,7 +147,7 @@ const data = {
           requirements as a certified simulator.
         </p>
         <p>Fly like a real Cessna 172 and 182 pilot!</p>
-        <a href="/contacto" class="btn-secondary">Schedule a visit</a>
+        <a href="/en/contact" class="btn-secondary">Schedule a visit</a>
       </div>
       <div class="flex-1 relative h-fit mr-5">
         <Image
@@ -180,7 +180,7 @@ const data = {
           This simulator will prepare you to fly each of our Pipistrel Virus SW
           121 safely and professionally.
         </p>
-        <a href="/contacto" class="btn-primary">Schedule a visit</a>
+        <a href="/en/contact" class="btn-primary">Schedule a visit</a>
       </div>
       <div class="flex-1 relative h-fit mr-5">
         <Image
