--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -39,7 +39,7 @@ import IndexForm from "~/components/IndexForm.astro";
           Pilot license. This license allows you to work in any area of civil
           aviation.
         </p>
-        <a href="/nosotros/historia" class="btn-primary">About Us</a>
+        <a href="/en/about/our-story" class="btn-primary">About Us</a>
       </div>
       <div class="flex-1 relative h-fit mr-5">
         <Image
@@ -160,7 +160,7 @@ import IndexForm from "~/components/IndexForm.astro";
           </p>
         </div>
         <a
-          href="/por-que-ser-piloto#programas"
+          href="/en/why-become-a-pilot#programas"
           class="btn-secondary hidden lg:block">See All</a
         >
       </div>
