--- a/src/pages/en/why-become-a-pilot.astro
+++ b/src/pages/en/why-become-a-pilot.astro
@@ -89,7 +89,7 @@ const data = {
             </div>
           </li>
         </ul>
-        <a href="/contacto" class="btn-primary">Register</a>
+        <a href="/en/contact" class="btn-primary">Register</a>
       </div>
     </div>
   </section>
