--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,17 @@
 ---
-import BaseLayout from "~/layouts/BaseLayout.astro";
-import HomepageHeader from "~/components/HomepageHeader.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
+import HomepageHeader from "../components/HomepageHeader.astro";
 import { Image } from "astro:assets";
-import students from "~/assets/cuatro-estudiantes-en-la-universidad-de-ifly.webp";
-import CounterCard from "~/components/CounterCard";
-import stats from "~/data/stats";
+import students from "../assets/cuatro-estudiantes-en-la-universidad-de-ifly.webp";
+import CounterCard from "../components/CounterCard";
+import stats from "../data/stats";
 import { FaCheck } from "react-icons/fa";
-import iflyStudents from "~/assets/estudiantes-de-ifly-recibiendo-medalla.webp";
-import graduatedStudents from "~/assets/estudiantes-graduados-de-la-universidad-de-ifly.webp";
-import programs from "~/data/programs";
-import ProgramCard from "~/components/ProgramCard.astro";
-import studentInHangar from "~/assets/estudiante-de-ifly-en-hangar.webp";
-import IndexForm from "~/components/IndexForm.astro";
+import iflyStudents from "../assets/estudiantes-de-ifly-recibiendo-medalla.webp";
+import graduatedStudents from "../assets/estudiantes-graduados-de-la-universidad-de-ifly.webp";
+import programs from "../data/programs";
+import ProgramCard from "../components/ProgramCard.astro";
+import studentInHangar from "../assets/estudiante-de-ifly-en-hangar.webp";
+import IndexForm from "../components/IndexForm.astro";
 ---
 
 <BaseLayout
