--- a/src/components/HomepageHeader.astro
+++ b/src/components/HomepageHeader.astro
@@ -1,6 +1,8 @@
 ---
 import { Image } from "astro:assets";
-import HeroImage from "/src/assets/estudiante-en-ifly-mexico.jpg";
+import HeroImage from "/src/assets/pilotos_001.jpg";
+import Logo from "/src/assets/logo_ifly_aviation_group_1tinta_blanco.png";
+import Ellipse from "/src/assets/ellipse_black_borders.png";
 
 const esData = {
   title: "La Universidad <br> Principal de Formación <br> de Pilotos de México",
@@ -24,14 +26,26 @@ const lang = Astro.currentLocale === "en" ? "en" : "es";
   class="relative isolate pt-14 overflow-hidden h-screen sm:h-[60vh] lg:h-screen text-white flex
     items-center"
 >
-  <Image
+    <Image
     src={HeroImage}
     alt="Estudiante en iFly"
     class="absolute top-0 w-full h-full object-cover -z-50"
     quality={100}
-  />
+    />
+    <Image
+    src={Ellipse}
+    alt="Estudiante en iFly"
+    class="absolute top-0 w-full h-full object-cover -z-40"
+    quality={100}
+    />
+    <Image
+    src={Logo}
+    alt="Estudiante en iFly"
+    class="absolute top-[10%] w-full h-[22%] object-scale-down -z-20"
+    quality={100}
+    />
 
-  <iframe
+  <!-- <iframe
     src="https://www.youtube.com/embed/L9q_TVnSj_4?autoplay=1&loop=1&mute=1&iv_load_policy=3&controls=0&disablekb=1&fs=0&playlist=L9q_TVnSj_4&vq=hd1080&start=32"
     title="iFly Universidad Aeronáutica"
     loading="eager"
@@ -39,27 +53,25 @@ const lang = Astro.currentLocale === "en" ? "en" : "es";
     clipboard-write; encrypted-media; gyroscope; picture-in-picture"
     referrerpolicy="strict-origin-when-cross-origin"
     class="hidden md:block absolute -top-52 w-[150rem] -left-[20rem] h-[100rem] object-cover -z-50"
-    id="video-iframe"></iframe>
-  <div
-    class="absolute inset-0 bg-gradient-to-t from-black via-transparent to-black -z-40"
-  >
-  </div>
+    id="video-iframe"></iframe> -->
 
-  <div class="flex w-full max-w-7xl mx-auto px-5">
-    <div class="flex flex-col gap-4 lg:gap-8 sm:translate-y-20">
+    <div class="absolute top-0 w-full h-full object-cover -z-30 bg-gradient-to-b from-black to-transparent"/>
+
+  <div class="flex-col w-full max-w-7xl mx-auto px-5">
+    <div class="flex flex-col items-center gap-4 lg:gap-8 sm:translate-y-20">
       <h1
-        class="text-4xl max-w-2xl lg:text-7xl font-medium lg:max-w-4xl"
+        class="text-2xl max-w-2xl text-center font-semibold lg:text-5xl lg:max-w-4xl"
         set:html={data.title}
       />
-      <h2 class="text-xl max-w-xl lg:text-3xl lg:max-w-2xl text-gray-200">
-        {data.subtitle}
+      <h2 class="text-3xl font-serif max-w-xl lg:text-5xl lg:max-w-2xl text-gray-200">
+        ::::::::
       </h2>
       <div class="flex gap-5 flex-col sm:flex-row">
         <a
           href={lang === "en" ? "/en/contact" : "/contacto"}
           class="btn-primary w-full sm:w-fit">{data.primaryButtonText}</a
         >
-        <a href="#bienvenido" class="btn-secondary w-full sm:w-fit"
+        <a href="#bienvenido" class="btn-primary w-full sm:w-fit"
           >{data.secondaryButtonText}</a
         >
       </div>
