--- a/src/components/ProgramCard.astro
+++ b/src/components/ProgramCard.astro
@@ -25,17 +25,9 @@ if (!images[imagePath]) {
 }
 ---
 
-<div class="max-w-sm flex flex-col group overflow-hidden rounded-xl text-white">
-  <div class="h-72 overflow-hidden shrink-0 relative">
-    <Image
-      src={images[imagePath]()}
-      alt={title}
-      class="w-full h-full object-cover scale-105 group-hover:scale-100 duration-700"
-    />
-  </div>
-
+<div class="max-w-[80vw] flex flex-row overflow-hidden text-white">
   <div
-    class="flex flex-col py-8 gap-3 justify-between h-full bg-main-black px-8"
+    class="flex flex-col py-8 gap-3 justify-between h-full lg:w-[30vw] lg:h-[40vh] bg-main-accent px-8"
   >
     <div class="flex flex-col gap-3">
       <h3 class="text-2xl lg:text-3xl font-semibold leading-tight min-h-20">
@@ -55,4 +47,12 @@ if (!images[imagePath]) {
       </a>
     </div>
   </div>
+  <div class="lg:w-[30vw] lg:h-[40vh] overflow-hidden shrink-0 relative border-blue-r">
+    <Image
+      src={images[imagePath]()}
+      alt={title}
+      class="w-full h-full object-cover scale-105 group-hover:scale-105 duration-700"
+    />
+  </div>
 </div>
+<br/>
