--- a/src/components/ProgramCard.astro
+++ b/src/components/ProgramCard.astro
@@ -14,7 +14,7 @@ const enData = {
 
 const data = Astro.currentLocale === "en" ? enData : esData;
 
-const { imagePath, title, url, description } = Astro.props;
+const { imagePath, title, subTitle, url, description } = Astro.props;
 const images = import.meta.glob<{ default: ImageMetadata }>(
   "/src/assets/*.{jpeg,jpg,png,gif,webp}",
 );
@@ -25,13 +25,16 @@ if (!images[imagePath]) {
 }
 ---
 
-<div class="max-w-[80vw] flex flex-row overflow-hidden text-white">
+<div class="max-w-[80vw] flex flex-row flex-wrap overflow-hidden text-white">
   <div
     class="flex flex-col py-8 gap-3 justify-between h-full lg:w-[30vw] lg:h-[40vh] bg-main-accent px-8"
   >
     <div class="flex flex-col gap-3">
-      <h3 class="text-2xl lg:text-3xl font-semibold leading-tight min-h-20">
+      <h3 class="text-2xl lg:text-3xl font-semibold leading-tight">
         {title}
+      </h3>
+      <h3 class="text-2xl lg:text-3xl leading-tight -skew-x-12">
+        {subTitle}
       </h3>
       <p class="line-clamp-3">{description}</p>
     </div>
@@ -41,13 +44,13 @@ if (!images[imagePath]) {
       >
       <a
         href={url}
-        class="group-hover:text-main-blue text-white duration-700 font-semibold py-5"
+        class="btn-secondary"
       >
         {data.secondaryButtonText}
       </a>
     </div>
   </div>
-  <div class="lg:w-[30vw] lg:h-[40vh] overflow-hidden shrink-0 relative border-blue-r">
+  <div class="h-[40vh] w-full lg:w-[30vw] lg:h-[40vh] overflow-hidden shrink-0 relative border-blue-r">
     <Image
       src={images[imagePath]()}
       alt={title}
