--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -115,6 +115,7 @@ import StudentsHangar from "../assets/estudiantes-frente-a-hangares-de-ifly.webp
             .map((program) => (
               <ProgramCard
                 title={program.data.title}
+                subTitle={program.data.subTitle}
                 description={program.data.description}
                 imagePath={program.data.headerImage}
                 url={program.data.url}
