--- a/src/components/ProgramCard.astro
+++ b/src/components/ProgramCard.astro
@@ -27,7 +27,7 @@ if (!images[imagePath]) {
 
 <div class="max-w-[80vw] flex flex-row flex-wrap overflow-hidden text-white">
   <div
-    class="flex flex-col py-8 gap-3 justify-between h-full lg:w-[30vw] lg:h-[40vh] bg-main-accent px-8"
+    class="flex flex-col py-8 gap-3 justify-between h-full lg:w-[30vw] lg:h-[50vh] bg-main-accent px-8"
   >
     <div class="flex flex-col gap-3">
       <h3 class="text-2xl lg:text-3xl font-semibold leading-tight">
@@ -36,9 +36,9 @@ if (!images[imagePath]) {
       <h3 class="text-2xl lg:text-3xl leading-tight -skew-x-12">
         {subTitle}
       </h3>
-      <p class="line-clamp-3">{description}</p>
+      <p class="line-clamp-3 lg:text-lg">{description}</p>
     </div>
-    <div class="flex gap-8 items-center mt-7">
+    <div class="flex flex-wrap gap-8 items-center mt-7">
       <a href=`${url}#sign-up-form` class="btn-primary"
         >{data.primaryButtonText}</a
       >
@@ -50,7 +50,7 @@ if (!images[imagePath]) {
       </a>
     </div>
   </div>
-  <div class="h-[40vh] w-full lg:w-[30vw] lg:h-[40vh] overflow-hidden shrink-0 relative border-blue-r">
+  <div class="h-[40vh] w-full lg:w-[30vw] lg:h-[50vh] overflow-hidden shrink-0 relative border-blue-r">
     <Image
       src={images[imagePath]()}
       alt={title}
