--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -95,14 +95,14 @@ import StudentsHangar from "../assets/estudiantes-frente-a-hangares-de-ifly.webp
       class="max-w-7xl mx-auto px-5 flex flex-col gap-20 items-center relative -top-[130px]"
     >
       <div class="flex flex-col gap-5 max-w-xl justify-center items-center content-center text-center">
-        <h2 class="uppercase font-bold text-main-blue tracking-widest text-xl lg:text-2xl">
+        <h2 class="uppercase font-bold text-main-blue text-xl lg:text-3xl tracking-tight">
           Nuestras Carreras
         </h2>
-        <h3 class="lg:text-lg text-main-blue">
+        <h3 class="lg:text-xl text-main-blue">
           Conoce nuestros programas de estudio
         </h3>
-        <p class="lg:text-lg text-left">
-          En iFly te ofrecemos programas de estudio para que te conviertas en
+        <p class="lg:text-2xl text-left w-[70vw] lg:w-[50vw]">
+          En iFly te oferecemos programas de estudio para que te conviertas en
           un profesional de la aviación civil. Conoce nuestros programas y
           elige el que más se adapte a tus necesidades.
         </p>
