--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,8 @@ import BgTextureDown from "../assets/bg-texture-down.jpg";
 import BgTextureUp from "../assets/bg-texture-up.jpg";
 import LogoWhiteNoText from "../assets/ifly-logo-white-no-text.png";
 import StudentsHangar from "../assets/estudiantes-frente-a-hangares-de-ifly.webp";
+import TestimonialsBG from "../assets/piloto-con-sobrecargos-de-aviacion2.jpg";
+
 ---
 
 <BaseLayout
@@ -90,7 +92,7 @@ import StudentsHangar from "../assets/estudiantes-frente-a-hangares-de-ifly.webp
     </div>
   </section>
 
-  <section class="text-white relative">
+  <section class="text-white relative z-20">
     <div
       class="max-w-7xl mx-auto px-5 flex flex-col gap-20 items-center relative -top-[130px]"
     >
@@ -130,36 +132,38 @@ import StudentsHangar from "../assets/estudiantes-frente-a-hangares-de-ifly.webp
     </div>
   </section>
 
-  <section class="lg:pb-60 bg-main-black/5">
-    <div
-      class="max-w-xl lg:max-w-7xl mx-auto px-5 py-24 flex flex-col lg:flex-row lg:-space-x-20 -space-y-20 lg:space-y-0 items-center"
-    >
-      <div class="flex-1">
-        <Image
-          src={studentInHangar}
-          alt="Estudiante en hangar de iFly"
-          class="rounded-xl z-10 relative lg:h-[34rem] object-cover"
-        />
-      </div>
+  <section class="lg:pb-60 flex flex-col gap-20 items-center relative -top-60 custom-bg-gradient-xy min-h-[87vw] lg:mb-60">
+    <Image
+      src={TestimonialsBG}
+      alt="Estudiante en hangar de iFly"
+      class="absolute inset-0 -z-50 object-cover object-center w-full h-full"
+    /> 
+    
       <div
-        class="flex-1 flex justify-center flex-col gap-5 text-center mx-5 sm:mx-10 lg:mx-0 bg-white border-2 border-main-blue p-5 lg:p-14 rounded-xl z-10"
+        class="max-w-[80vw] lg:max-w-[60vw] flex-1 flex flex-col gap-5 justify-center items-center content-center text-center mx-5 sm:mx-10 lg:mx-0 bg-sec-blue border-2 p-5 lg:p-14 z-10 absolute bottom-0 overflow-hidden"
       >
-        <h2 class="uppercase text-main-black/80 tracking-widest">
-          Testimonial
+        <Image
+          src={LogoWhiteNoText}
+          alt="iFly logo in white"
+          class="w-44 absolute -left-11 -top-3"
+        />
+
+        <h2 class="uppercase font-bold text-main-blue text-xl lg:text-3xl tracking-tight">
+          Testimonials
         </h2>
-        <h3 class="text-lg text-main-black/80 sm:text-3xl lg:text-5xl">
+        <h3 class="lg:text-xl text-main-blue border-fade-light pb-2">
           Conoce la experiencia de nuestros estudiantes
         </h3>
-        <quote class="text-main-black/70">
+        <quote class="max-w-[60%] text-left flex flex-col">
           "iFly es la familia que me vió nacer como piloto aviador profesional y
           me ayudó a cumplir uno de mis más grandes sueños, es para mí un placer
           y un orgullo haberme formado en esta gran familia."
+          <br/>
+          <cite class="text-right font-semibold">- Roberto Novelo Cicero (Piloto aviador)</cite
+          >
         </quote>
-        <cite class="text-main-black/90"
-          >- Roberto Novelo Cicero (Piloto aviador)</cite
-        >
+
       </div>
-    </div>
   </section>
 
   <IndexForm />
