Fiz mobile layouts

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,13 +38,13 @@ import TestimonialsBG from "../assets/piloto-con-sobrecargos-de-aviacion2.jpg";
     <div
       class="max-w-[70vw] lg:max-w-[50vw] mx-auto px-5 py-24 flex flex-col-reverse lg:flex-row gap-20 items-center"
     >
-      <div class="flex-1 flex justify-center items-center content-center flex-col gap-5 text-center">
+      <div class="flex-1 flex justify-center items-center content-center flex-col gap-5 lg:text-center">
         <Image
           src={LogoWhiteNoText}
           alt="iFly logo in white"
           class="w-24"
         />
-        <h2 class="uppercase text-main-blue text-2xl lg:text-4xl font-bold tracking-widest">
+        <h2 class="uppercase text-main-blue text-2xl lg:text-4xl font-bold tracking-widest text-center">
           Bienvenido a iFly
         </h2>
         <h3 class="text-xl lg:text-3xl font-bold">
@@ -132,7 +132,7 @@ import TestimonialsBG from "../assets/piloto-con-sobrecargos-de-aviacion2.jpg";
     </div>
   </section>
 
-  <section class="lg:pb-60 flex flex-col gap-20 items-center relative -top-52 custom-bg-gradient-xy min-h-[87vw] lg:mb-60">
+  <section class="lg:pb-60 flex flex-col gap-20 items-center relative -top-52 custom-bg-gradient-xy min-h-[100vh] lg:min-h-[87vw] lg:mb-60">
     <Image
       src={TestimonialsBG}
       alt="Estudiante en hangar de iFly"
@@ -145,7 +145,7 @@ import TestimonialsBG from "../assets/piloto-con-sobrecargos-de-aviacion2.jpg";
         <Image
           src={LogoWhiteNoText}
           alt="iFly logo in white"
-          class="w-44 absolute -left-11 -top-3"
+          class="w-44 absolute -left-11 -top-3 -z-50 filter-opacity-20"
         />
 
         <h2 class="uppercase font-bold text-main-blue text-xl lg:text-3xl tracking-tight">
