--- a/src/components/PlaneClouds.astro
+++ b/src/components/PlaneClouds.astro
@@ -4,18 +4,18 @@ import Clouds from "../assets/clouds-from-above.jpg";
 import Plane from "../assets/ifly-plane-no-bg.png";
 ---
 
-<section class="w-full h-[80vh] relative custom-bg-gradient z-00 overflow-hidden">
+<section class="w-full h-[40vh] md:h-[60vh] lg:h-[80vh] relative custom-bg-gradient z-00 overflow-hidden">
   <Image
     src={Clouds}
     alt="skies from above"
-    class="-z-50 block absolute top-0"
+    class="-z-50 block absolute object-cover object-center w-full h-full top-0"
   />
   <Image
     src={Plane}
     alt="plane with iFly logo"
     class="z-30 block absolute top-[5vh] left-[10vw] w-[70vw]"
   />
-  <h1 class="text-2xl w-full text-center font-semibold lg:text-5xl relative top-[60%] left[50%]">
+  <h1 class="text-2xl w-full text-center font-semibold lg:text-5xl relative top-[60%] left[50%] z-50">
     Convierte tu amor por volar<br/>en una carrera profesional
   </h1>
 
