Add english page

--- a/src/components/HomepageHeader.astro
+++ b/src/components/HomepageHeader.astro
@@ -12,7 +12,7 @@ const esData = {
 };
 
 const enData = {
-  title: "Mexico's Premier Pilot Training University",
+  title: "Mexico's Premier <br> Pilot Training University",
   subtitle: "Turn your love for flying into a professional career",
   primaryButtonText: "Register",
   secondaryButtonText: "Learn More",
