--- a/src/components/PlaneClouds.astro
+++ b/src/components/PlaneClouds.astro
@@ -2,6 +2,15 @@
 import { Image } from "astro:assets";
 import Clouds from "../assets/clouds-from-above.jpg";
 import Plane from "../assets/ifly-plane-no-bg.png";
+const esData = {
+  text: "Convierte tu amor por volar<br/>en una carrera profesional"
+};
+
+const enData = {
+  text: "Turn your love for flying<br/>into a professional career."
+};
+
+const data = Astro.currentLocale === "en" ? enData : esData;
 ---
 
 <section class="w-full h-[40vh] md:h-[60vh] lg:h-[80vh] relative custom-bg-gradient z-00 overflow-hidden">
@@ -15,8 +24,9 @@ import Plane from "../assets/ifly-plane-no-bg.png";
     alt="plane with iFly logo"
     class="z-30 block absolute top-[5vh] left-[10vw] w-[70vw]"
   />
-  <h1 class="text-2xl w-full text-center font-semibold lg:text-5xl relative top-[60%] left[50%] z-50">
-    Convierte tu amor por volar<br/>en una carrera profesional
+  <h1 class="text-2xl w-full text-center font-semibold lg:text-5xl relative top-[60%] left[50%] z-50"
+      set:html={data.text}
+  >
   </h1>
 
 </section>
