--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -1,62 +1,78 @@
 ---
-import BaseLayout from "~/layouts/BaseLayout.astro";
-import HomepageHeader from "~/components/HomepageHeader.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
+import HomepageHeader from "../../components/HomepageHeader.astro";
 import { Image } from "astro:assets";
-import students from "~/assets/cuatro-estudiantes-en-la-universidad-de-ifly.webp";
-import CounterCard from "~/components/CounterCard";
-import stats from "~/data/en/stats";
-import { FaCheck } from "react-icons/fa";
-import iflyStudents from "~/assets/estudiantes-de-ifly-recibiendo-medalla.webp";
-import graduatedStudents from "~/assets/estudiantes-graduados-de-la-universidad-de-ifly.webp";
-import programs from "~/data/en/programs";
-import ProgramCard from "~/components/ProgramCard.astro";
-import studentInHangar from "~/assets/estudiante-de-ifly-en-hangar.webp";
-import IndexForm from "~/components/IndexForm.astro";
+import CounterCard from "../../components/CounterCard";
+import stats from "../../data/stats";
+import programs from "../../data/programs";
+import ProgramCard from "../../components/ProgramCard.astro";
+import IndexForm from "../../components/IndexForm.astro";
+import PlaneClouds from "../../components/PlaneClouds.astro";
+import BgTextureDown from "../../assets/bg-texture-down.jpg";
+import BgTextureUp from "../../assets/bg-texture-up.jpg";
+import LogoWhiteNoText from "../../assets/ifly-logo-white-no-text.png";
+import StudentsHangar from "../../assets/estudiantes-frente-a-hangares-de-ifly.webp";
+import TestimonialsBG from "../../assets/piloto-con-sobrecargos-de-aviacion2.jpg";
+
 ---
 
 <BaseLayout
   siteTitle="iFly Aeronautical University - Comprehensive Training for Pilots and Aviation Professionals"
-  siteDescription="Welcome to iFly, the first aeronautical university in Mexico. Prepare to achieve your dream of flying with programs for pilots, operations officers, flight attendants, and more. Get your Commercial Pilot License today!"
+  siteDescription="Welcome to iFly, Mexico's first aeronautical university. Prepare to achieve your dream of flying with programs for pilots, operations officers, flight attendants, and more. Get your Commercial Pilot License today!"
 >
   <HomepageHeader slot="header" />
+  <PlaneClouds />
 
-  <section id="bienvenido" class="scroll-my-24 bg-main-black/5">
+  <section id="welcome" class="scroll-my-24 custom-bg-gradient-b relative overflow-hidden">
+    <Image
+      src={BgTextureDown}
+      alt="Texture used for background"
+      class="absolute inset-0 -z-50 object-cover object-center w-full h-full"
+    />
+
     <div
-      class="max-w-xl lg:max-w-7xl mx-auto px-5 py-24 flex flex-col-reverse lg:flex-row gap-20 items-center"
+      class="max-w-[70vw] lg:max-w-[50vw] mx-auto px-5 py-24 flex flex-col-reverse lg:flex-row gap-20 items-center"
     >
-      <div class="flex-1 flex justify-center flex-col gap-5">
-        <h2 class="uppercase text-main-black/80 tracking-widest">
+      <div class="flex-1 flex justify-center items-center content-center flex-col gap-5 lg:text-center">
+        <Image
+          src={LogoWhiteNoText}
+          alt="iFly logo in white"
+          class="w-24"
+        />
+        <h2 class="uppercase text-main-blue text-2xl lg:text-4xl font-bold tracking-widest text-center">
           Welcome to iFly
         </h2>
-        <h3 class="text-4xl lg:text-5xl">
-          We are the first aeronautical university for aviators in Mexico
+        <h3 class="text-xl lg:text-3xl font-bold">
+          We are the first aeronautical university for aviator pilots in Mexico
         </h3>
-        <p class="text-main-black/70">
-          We prepare you to become a professional in the skies. Whether you
-          choose our Pro Pilot program and earn a University Higher Technician
-          degree, or pursue a Bachelor’s in Aviation Management and obtain a
-          Bachelor's degree, you will graduate with a Fixed-Wing Commercial
-          Pilot license. This license allows you to work in any area of civil
-          aviation.
+        <p>
+          We prepare you to be a professional in the skies. Whether you choose
+          our Pro Pilot program to earn a University Technician degree, or the
+          Aviation Management bachelor's degree and earn a Licentiate degree. <br/> <br/> At the end of
+          these programs, you will obtain the Fixed-Wing Commercial Pilot License,
+          allowing you to work in any area of civil aviation.
         </p>
-        <a href="/en/about/our-story" class="btn-primary">About Us</a>
-      </div>
-      <div class="flex-1 relative h-fit mr-5">
-        <Image
-          src={students}
-          alt="Estudiante en iFly"
-          class="rounded-xl z-10 relative"
-        />
-        <div
-          class="absolute border-2 border-main-blue translate-x-5 -translate-y-5 rounded-xl inset-0"
-        >
-        </div>
+        <!-- <a href="/about-us/history" class="btn-primary">About Us</a> -->
       </div>
     </div>
   </section>
 
-  <section class="bg-main-black/5">
-    <div class="mx-auto max-w-7xl grid sm:grid-cols-2 lg:grid-cols-4">
+  <section class="bg-main-black/5 relative pb-[30vh] custom-bg-gradient-t">
+    <div class="overflow-hidden h-[60vh] relative">
+      <Image
+          src={StudentsHangar}
+          alt="iFly students posing in front of hangar"
+          class="absolute inset-0 object-cover object-center w-full h-full border-blue-y"
+      />
+    </div>
+    <Image
+      src={BgTextureUp}
+      alt="Texture used for background"
+      class="absolute inset-0 -z-50 object-cover object-center w-full h-full"
+    />
+
+    
+    <div class="relative -top-[60px] mx-auto max-w-7xl grid sm:grid-cols-2 lg:grid-cols-4 grid-colors">
       {
         stats.map((stat) => (
           <CounterCard
@@ -69,109 +85,31 @@ import IndexForm from "~/components/IndexForm.astro";
     </div>
   </section>
 
-  <section class="bg-main-black/5">
-    <div class="max-w-7xl mx-auto px-5 py-24 flex flex-col lg:flex-row gap-20">
-      <div class="flex-1 relative">
-        <Image
-          src={iflyStudents}
-          alt="Estudiante en iFly"
-          class="rounded-xl z-10 lg:absolute max-h-72 lg:max-h-none lg:w-80 aspect-square object-cover top-0 left-0"
-        />
-        <Image
-          src={graduatedStudents}
-          alt="Estudiante en iFly"
-          class="rounded-xl mt-10 lg:mt-0 z-10 lg:absolute max-h-72 lg:max-h-none lg:w-80 aspect-square object-cover bottom-0 right-0"
-        />
-        <div
-          class="hidden lg:block lg:absolute inset-20 border-2 border-main-blue rounded-xl"
-        >
-        </div>
-      </div>
-      <div class="flex-1 flex justify-center flex-col gap-5">
-        <h2 class="uppercase text-main-black/80 tracking-widest">
-          Why study at iFly?
-        </h2>
-        <h3 class="lg:text-5xl">
-          We offer you exceptional training to fulfill your dream of flying
-          professionally
-        </h3>
-        <p class="text-main-black/70">
-          If your passion lies in the skies, iFly is the perfect place for you.
-          Our study programs are designed to help you become a professional
-          pilot, enabling you to work in any area of civil aviation. iFly offers
-          careers in:
-        </p>
-        <ul class="grid grid-cols-2 gap-4 text-main-black/70">
-          <li class="flex gap-2 items-center">
-            <div class="p-2 bg-main-black rounded-full">
-              <FaCheck className="size-2 lg:size-3 text-white" />
-            </div>
-            <p class="text-sm lg:text-base">Aviation Management</p>
-          </li>
-          <li class="flex gap-2 items-center">
-            <div class="p-2 bg-main-black rounded-full">
-              <FaCheck className="size-2 lg:size-3 text-white" />
-            </div>
-            <p class="text-sm lg:text-base">Pro Pilot</p>
-          </li>
-          <li class="flex gap-2 items-center">
-            <div class="p-2 bg-main-black rounded-full">
-              <FaCheck className="size-2 lg:size-3 text-white" />
-            </div>
-            <p class="text-sm lg:text-base">Cadet Pilot</p>
-          </li>
-          <li class="flex gap-2 items-center">
-            <div class="p-2 bg-main-black rounded-full">
-              <FaCheck className="size-2 lg:size-3 text-white" />
-            </div>
-            <p class="text-sm lg:text-base">Flight Attendant</p>
-          </li>
-          <li class="flex gap-2 items-center">
-            <div class="p-2 bg-main-black rounded-full">
-              <FaCheck className="size-2 lg:size-3 text-white" />
-            </div>
-            <p class="text-sm lg:text-base">Operations Officer</p>
-          </li>
-          <li class="flex gap-2 items-center">
-            <div class="p-2 bg-main-black rounded-full">
-              <FaCheck className="size-2 lg:size-3 text-white" />
-            </div>
-            <p class="text-sm lg:text-base">Maintenance Technician</p>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </section>
-
-  <section class="bg-main-blue text-white">
+  <section class="text-white relative z-20">
     <div
-      class="max-w-7xl mx-auto px-5 py-24 flex flex-col gap-20 items-center lg:items-stretch"
+      class="max-w-7xl mx-auto px-5 flex flex-col gap-20 items-center relative -top-[130px]"
     >
-      <div class="flex justify-between items-end gap-20">
-        <div class="flex justify-center flex-col gap-5 max-w-xl">
-          <h2 class="uppercase text-main-black font-bold tracking-widest">
-            Our Programs
-          </h2>
-          <h3 class="text-4xl lg:text-5xl">Discover Our Study Programs</h3>
-          <p class="lg:text-lg">
-            At iFly, we offer study programs to help you become a professional
-            in civil aviation. Explore our programs and choose the one that best
-            fits your needs.
-          </p>
-        </div>
-        <a
-          href="/en/why-become-a-pilot#programas"
-          class="btn-secondary hidden lg:block">See All</a
-        >
+      <div class="flex flex-col gap-5 max-w-xl justify-center items-center content-center text-center">
+        <h2 class="uppercase font-bold text-main-blue text-xl lg:text-3xl tracking-tight">
+          Our Programs
+        </h2>
+        <h3 class="lg:text-xl text-main-blue">
+          Learn about our study programs
+        </h3>
+        <p class="lg:text-2xl text-left w-[70vw] lg:w-[50vw]">
+          At iFly, we offer study programs to help you become a professional in
+          civil aviation. Explore our programs and choose the one that best fits your needs.
+        </p>
       </div>
 
-      <div class="grid grid-cols-1 lg:grid-cols-3 gap-10">
+      <div class="flex-col gap-10">
         {
           programs
             .slice(0, 3)
             .map((program) => (
               <ProgramCard
                 title={program.data.title}
+                subTitle={program.data.subTitle}
                 description={program.data.description}
                 imagePath={program.data.headerImage}
                 url={program.data.url}
@@ -180,39 +118,55 @@ import IndexForm from "~/components/IndexForm.astro";
         }
       </div>
       <a
-        href="/por-que-ser-piloto#programas"
-        class="btn-secondary lg:hidden w-full max-w-lg">See All</a
+        href="/why-become-a-pilot#programs"
+        class="btn-primary w-full max-w-lg">See All</a
       >
     </div>
   </section>
 
-  <section class="lg:pb-60 bg-main-black/5">
-    <div
-      class="max-w-xl lg:max-w-7xl mx-auto px-5 py-24 flex flex-col lg:flex-row lg:-space-x-20 -space-y-20 lg:space-y-0 items-center"
-    >
-      <div class="flex-1">
-        <Image
-          src={studentInHangar}
-          alt="Estudiante en hangar de iFly"
-          class="rounded-xl z-10 relative lg:h-[34rem] object-cover"
-        />
-      </div>
+  <section class="lg:pb-60 flex flex-col gap-20 items-center relative -top-52 custom-bg-gradient-xy min-h-[100vh] lg:min-h-[87vw] lg:mb-60">
+    <Image
+      src={TestimonialsBG}
+      alt="Student in iFly hangar"
+      class="absolute inset-0 -z-50 object-cover object-center w-full h-full"
+    /> 
+    
       <div
-        class="flex-1 flex justify-center flex-col gap-5 text-center mx-5 sm:mx-10 lg:mx-0 bg-white border-2 border-main-blue p-5 lg:p-14 rounded-xl z-10"
+        class="max-w-[80vw] lg:max-w-[60vw] flex-1 flex flex-col gap-5 justify-center items-center content-center text-center mx-5 sm:mx-10 lg:mx-0 bg-sec-blue border-2 p-5 lg:p-14 z-10 absolute bottom-0 overflow-hidden"
       >
-        <h2 class="uppercase text-main-black/80 tracking-widest">
-          Testimonial
+        <Image
+          src={LogoWhiteNoText}
+          alt="iFly logo in white"
+          class="w-44 absolute -left-11 -top-3 -z-50 filter-opacity-20"
+        />
+
+        <h2 class="uppercase font-bold text-main-blue text-xl lg:text-3xl tracking-tight">
+          Testimonials
         </h2>
-        <h3 class="text-lg sm:text-3xl lg:text-5xl">What Our Students Say</h3>
-        <quote class="text-main-black/70">
-          "iFly is the family that helped me grow into a professional pilot and
-          assisted me in achieving one of my greatest dreams. It is both a
-          pleasure and an honor to have trained in this great family."
+        <h3 class="lg:text-xl text-main-blue border-fade-light pb-2">
+          Learn about our students' experiences
+        </h3>
+        <quote class="max-w-[60%] text-left flex flex-col">
+          "iFly is the family that saw me grow into a professional aviator pilot and
+          helped me fulfill one of my greatest dreams. It is a pleasure and an honor
+          for me to have trained in this great family."
+          <br/>
+          <cite class="text-right font-semibold">- Roberto Novelo Cicero (Aviator Pilot)</cite
+          >
         </quote>
-        <cite class="text-main-black/90">- Roberto Novelo Cicero (Pilot)</cite>
+
       </div>
-    </div>
   </section>
 
   <IndexForm />
 </BaseLayout>
+
+<!-- <script>
+  const userLang = navigator.language;
+
+  if (userLang.startsWith("en")) {
+    window.location.href = "/en";
+  } else {
+    window.location.href = "/";
+  }
+</script> -->
