--- a/src/components/IndexForm.astro
+++ b/src/components/IndexForm.astro
@@ -5,9 +5,6 @@ const PROGRAM_FORM_WEBHOOK_URL = import.meta.env.PROGRAM_FORM_WEBHOOK_URL;
 const programs = Astro.currentLocale === "en" ? enPrograms : esPrograms;
 
 const esData = {
-  title: "Toma el primer paso...",
-  firstParagraph:
-    "Empieza a estudiar hoy en iFly Universidad Aeronáutica y toma el primer paso en tu carrera.",
   secondParagraph:
     "Llena el formulario y un representante de iFly se pondrá en contacto contigo para darte más información sobre la carrera que te interesa.",
   careerQuestion: "¿En qué carrera estás interesado?",
@@ -25,9 +22,6 @@ const esData = {
 };
 
 const enData = {
-  title: "Take the first step...",
-  firstParagraph:
-    "Start studying today at iFly Aeronautical University and take the first step in your career.",
   secondParagraph:
     "Fill out the form and an iFly representative will contact you to provide more information about the career you are interested in.",
   careerQuestion: "What career are you interested in?",
@@ -48,61 +42,53 @@ const data = Astro.currentLocale === "en" ? enData : esData;
 const lang = Astro.currentLocale === "en" ? "en" : "es";
 ---
 
-<section class="py-24 px-5 scroll-my-24 bg-main-blue" id="sign-up-form">
-  <div class="max-w-xl lg:max-w-7xl mx-auto text-white">
-    <div class="flex flex-col lg:flex-row gap-10">
-      <div class="lg:flex-1 flex flex-col gap-5">
-        <h2 class="font-extrabold text-5xl text-main-black">
-          {data.title}
-        </h2>
-        <p class="text-lg">
-          {data.firstParagraph}
-        </p>
-        <p class="text-lg">
+<section class="py-24 px-5 scroll-my-24 relative -mb-[30rem]" id="sign-up-form">
+  <div class="max-w-xl lg:max-w-6xl mx-auto text-white border-blue py-28 relative -top-[36rem]">
+    <div class="flex-1 flex flex-col gap-5 justify-center items-center content-center text-center">
+      <div class="lg:flex-1 relative lg:w-[70%]">
+        <p class="text-2xl text-white/80 py-12">
           {data.secondParagraph}
         </p>
-      </div>
-      <div class="lg:flex-1 relative">
         <form
           id="form"
-          class="flex flex-col max-w-4xl mx-auto gap-5 my-5 lg:my-0 bg-white p-10 rounded-xl shadow-md lg:absolute bottom-0 right-0"
+          class="flex flex-col max-w-4xl mx-auto gap-5 my-5 lg:my-0 p-10 shadow-md"
         >
-          <div class="flex flex-col lg:flex-row gap-5">
+          <div class="flex flex-col gap-5">
             <input
               type="text"
               name="first-name"
               placeholder={data.placeholders.firstName}
-              class="px-5 py-4 outline-1 w-full border-gray-400 border outline-gray-500 rounded-lg"
+              class="px-5 py-4 outline-1 w-full border-gray-500 border outline-gray-00 placeholder-white bg-gray-400"
               required
             />
             <input
               type="text"
               name="last-name"
               placeholder={data.placeholders.lastName}
-              class="px-5 py-4 outline-1 w-full border-gray-400 border outline-gray-500 rounded-lg"
+              class="px-5 py-4 outline-1 w-full border-gray-500 border outline-gray-600 placeholder-white bg-gray-400"
               required
             />
           </div>
-          <div class="flex flex-col lg:flex-row gap-5">
+          <div class="flex flex-col gap-5">
             <input
               id="email"
               type="email"
               name="email"
               placeholder={data.placeholders.email}
-              class="px-5 py-4 outline-1 w-full border-gray-400 border outline-gray-500 rounded-lg"
+              class="px-5 py-4 outline-1 w-full border-gray-500 border outline-gray-600 placeholder-white bg-gray-400"
               required
             />
             <input
               type="email"
               name="confirm-email"
               placeholder="Confirm email"
-              class="hidden px-5 py-4 outline-1 w-full border-gray-400 border outline-gray-500 rounded-lg"
+              class="hidden px-5 py-4 outline-1 w-full border-gray-500 border outline-gray-600 placeholder-white bg-gray-400"
             />
             <input
               type="tel"
               name="phone"
               placeholder={data.placeholders.phone}
-              class="px-5 py-4 outline-1 w-full border-gray-400 border outline-gray-500 rounded-lg"
+              class="px-5 py-4 outline-1 w-full border-gray-500 border outline-gray-600 placeholder-white bg-gray-400"
               required
             />
           </div>
@@ -110,7 +96,7 @@ const lang = Astro.currentLocale === "en" ? "en" : "es";
           <select
             id="interested-in"
             name="interested-in"
-            class="px-5 py-4 outline-1 w-full border-gray-400 border outline-gray-500 rounded-lg text-gray-600 bg-white"
+            class="px-5 py-4 outline-1 w-full border-gray-500 border outline-gray-600 bg-gray-400 text-white"
             required
           >
             <option value="" disabled selected>
@@ -132,7 +118,7 @@ const lang = Astro.currentLocale === "en" ? "en" : "es";
             id="more-info"
             name="more-info"
             placeholder={data.placeholders.comment}
-            class="px-5 py-4 outline-1 border-gray-400 border outline-gray-500 rounded-lg min-h-24 text-main-black"
+            class="px-5 py-4 outline-1 border-gray-500 border outline-gray-600 placeholder-white bg-gray-400 min-h-24 text-main-black"
             required></textarea>
 
           <div class="flex gap-3">
@@ -144,7 +130,7 @@ const lang = Astro.currentLocale === "en" ? "en" : "es";
 
             <label
               for="agree-data-collection"
-              class="text-gray-500 text-sm lg:text-base"
+              class="text-white/90 text-sm lg:text-base text-left"
             >
               {data.acceptTerms}
             </label>
@@ -153,7 +139,7 @@ const lang = Astro.currentLocale === "en" ? "en" : "es";
             id="submit-button"
             disabled
             type="submit"
-            class="btn-primary cursor-not-allowed bg-gray-400 hover:bg-gray-400"
+            class="btn-primary w-[80%] cursor-not-allowed bg-gray-400 hover:bg-gray-400 self-center"
             >{data.submit}</button
           >
         </form>
